# voxtral-mini-realtime-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  handoff.md  plan.md  state.md
benches/: assistant.rs
benchmarks/: BENCHMARK_RESULTS.md  all_results.json  assistant_microbench.md  bench_long.txt  bench_long_selective.txt  bench_output.txt  bench_zerocopy.txt  bench_zerocopy_2min.txt  l0_zerocopy_results.json  long_discrete.json  long_discrete_sp.json  long_hybrid.json  long_hybrid_pipe.json  rtf_comparison.json  zerocopy_discrete_sp.json  zerocopy_discrete_sp_2min.json
docs/: ARCHITECTURE_v2.md  PERFORMANCE.md  SETUP.md  SHANNON_PRIME_SVM_ENGINE.md  USAGE.md  WASM_API.md
space/: index.html  voxtral-client.js  waveform.js
src/: lib.rs
src/assistant/: asr.rs  assets.rs  audio_in.rs  audio_out.rs  config.rs  filler.rs  llm.rs  mixer.rs  mod.rs  orchestrator.rs  repair.rs  routing.rs  shredder.rs  state.rs  tts.rs  vad.rs
src/audio/: mod.rs  ring_buffer.rs
src/engine/: mod.rs  svm.rs
src/gguf/: loader.rs  mod.rs  model.rs
src/l0/: decode.rs  device.rs  kernel.rs  mod.rs  ocl_compile.rs  q4_decoder.rs  spirv_gen.rs  usm.rs
src/models/layers/: kv_cache.rs  mod.rs  shannon_prime.rs
src/tui/: assistant_view.rs  mod.rs  waveform_widget.rs
