[package]
name = "voxtral-mini-realtime"
version = "0.2.5"
edition = "2021"
description = "Voxtral Mini 4B Realtime - Streaming ASR in Rust with Burn"
license = "Apache-2.0"
repository = "https://github.com/TrevorS/voxtral-mini-realtime-rs"
authors = ["Trevor Strieber"]

[features]
default = ["wgpu", "native-tokenizer"]
wgpu = ["burn/wgpu"]
cli = ["clap", "indicatif", "ratatui", "crossterm"]
hub = ["hf-hub"]
# Real-time conversational assistant (mic + speaker + tokio orchestrator).
# Desktop only — gated off WASM.
assistant = ["cli", "wgpu", "native-tokenizer", "dep:tokio", "dep:cpal", "dep:rand"]
# Real LLM via candle (pure Rust, no native deps). Loads GGUF Q4/F16
# Qwen2.5 or Gemma. Enable on top of `assistant` for real token streaming;
# the assistant feature alone uses an echo placeholder.
llm = [
    "assistant",
    "hub",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
# CUDA backend for the candle LLM. Builds against the system CUDA toolkit
# (NVCC + cuBLAS). Massive TTFT improvement vs CPU candle on NVIDIA cards
# (~10–30× on Qwen 0.5B). Enable on top of `llm` for an RTX/CUDA system.
llm-cuda = [
    "llm",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
# Tekken BPE encoding via tiktoken (WASM-compatible, no C deps)
native-tokenizer = ["tiktoken-rs"]
# WASM/browser support - uses wgpu (WebGPU) backend for GPU inference
wasm = [
    "wgpu",
    "dep:wgpu",
    "native-tokenizer",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "getrandom/wasm_js",
]
profiling = ["tracing-chrome"]
# Intel Level Zero backend for zero-copy iGPU decode (Windows only)
l0 = ["libloading", "naga"]

[dependencies]
# Burn ML framework - latest version with backend selection via features
burn = { version = "0.20", default-features = false, features = ["std", "autodiff", "template", "autotune"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# Tekken BPE encoding (tiktoken core, WASM-compatible)
tiktoken-rs = { version = "0.10", optional = true }
base64 = "0.22"

# Audio processing
hound = "3.5"              # WAV I/O
rubato = "1.0"             # High-quality resampling
rustfft = "6.4"            # FFT for spectrograms
audioadapter-buffers = "2.0" # Buffer adapters for rubato

# Serialization & model loading
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = { version = "0.7", optional = true }
pollster = "0.4"
num-traits = "0.2"
num-complex = "0.4"
byteorder = "1.5"
flate2 = "1.1"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# HuggingFace Hub (optional)
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
half = "2.7"
memmap2 = "0.9"

# NDArray for test data loading (used by test binary too)
ndarray = "0.16"
ndarray-npy = "0.9"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", default-features = false, optional = true }
# Direct wgpu dep for custom device init (must match cubecl-wgpu's version)
wgpu = { version = "26", features = ["fragile-send-sync-non-atomic-wasm"], optional = true }
rustc-hash = "1.1"

# Level Zero backend (optional)
libloading = { version = "0.8", optional = true }
naga = { version = "29", features = ["wgsl-in", "spv-out"], optional = true }

# Assistant orchestrator runtime (optional, desktop-only)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "signal"], optional = true }
cpal = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }

# Local LLM via candle (pure Rust GGUF inference, gated behind `llm` feature)
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }

[dev-dependencies]
criterion = "0.8"
approx = "0.5"
tempfile = "3.24"
pollster = "0.4.0"

[[bin]]
name = "voxtral"
path = "src/bin/voxtral/main.rs"
required-features = ["cli", "native-tokenizer"]

[[bin]]
name = "e2e-bench"
path = "src/bin/e2e_bench.rs"
required-features = ["wgpu", "cli"]

[[bin]]
name = "voxtral-bench-assistant"
path = "src/bin/assistant_bench.rs"
required-features = ["assistant"]

[[bin]]
name = "l0-smoke"
path = "src/bin/l0_smoke.rs"
required-features = ["l0"]

[[bin]]
name = "l0-q4-test"
path = "src/bin/l0_q4_test.rs"
required-features = ["l0"]

[[bin]]
name = "l0-bench"
path = "src/bin/l0_bench.rs"
required-features = ["l0"]

[[bin]]
name = "l0-decode"
path = "src/bin/l0_decode.rs"
required-features = ["l0", "wgpu", "cli"]

[[bin]]
name = "l0-hybrid"
path = "src/bin/l0_hybrid.rs"
required-features = ["l0", "wgpu", "cli"]

[[bench]]
name = "audio"
harness = false

[[bench]]
name = "q4_ops"
harness = false
required-features = ["wgpu"]

[[bench]]
name = "q4_pipeline"
harness = false
required-features = ["wgpu"]

[[bench]]
name = "assistant"
harness = false
required-features = ["assistant"]

# WASM library target
[lib]
crate-type = ["cdylib", "rlib"]

# cargo-dist configuration
[package.metadata.dist]
features = ["wgpu", "cli", "hub"]
dist = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-wasm]
inherits = "release"
# Optimize for size in WASM
opt-level = "s"

[profile.profiling]
inherits = "release"
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Patch cubecl-wgpu to cap subgroup size workaround against WebGPU's
# max_compute_invocations_per_workgroup (256). Without this, cubek-reduce
# creates workgroups of 128*8=1024 which exceeds the WebGPU limit.
[patch.crates-io]
cubecl-wgpu = { path = "patches/cubecl-wgpu-0.9.0" }
